webview-log.txt
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
output_errors: 
output_warnings: 
toggle panel clicked in webview
output_errors: 
output_warnings: 
toggle panel clicked in webview
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
output_errors: 
output_warnings: 
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
output_errors:         OCaml version 4.12.0

File "d:/Desktop/ocaml_Test/test.ml.tmp", line 14, characters 2-3:
14 | ;;;
       ^
Error: Syntax error

output_warnings: 
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
output_errors: 
output_warnings: 
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
output_errors: 
output_warnings: 
toggle panel clicked in webview
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
toggle panel clicked in webview
toggle panel clicked in webview
toggle panel clicked in webview
Congratulations, your extension "BEC" is now active!
toggle panel clicked in webview
toggle panel clicked in webview
